[tool.poetry]
name = "simple-atm-controller"
version = "0.1.0"
description = "A simple ATM controller."
authors = ["lens0021 <lorentz0021@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
